--- a/odtp.yml
+++ b/odtp.yml
@@ -1,95 +1,157 @@
-# This file should contain basic component information for your component.
+# Schema version for tracking updates to the schema format
+schema-version: "v0.5.0"
+
+# Component Information
 component-name: Component Name
-component-author: Component Author
-component-version: Component Version
-component-repository: Component Repository
+component-authors:
+  - name: Author One
+    orcid: "https://orcid.org/0000-0001-2345-6789"
+  - name: Author Two
+    orcid: "https://orcid.org/0000-0002-3456-7890"
+component-version: "1.0.0"
+component-repository:
+  url: "https://github.com/organization/component-repo"
+  doi: "https://doi.org/10.1234/component.doi"
 component-license: Component License
 component-type: ephemeral or interactive
-component-description: Description
+component-description: Description of the component's function
+component-docker-image: "dockeruser/dockerimage:label"
 tags:
   - tag1
   - tag2
 
-# Information about the tools
+# Tool Information
 tools:
-  - tool-name: tool's name
-    tool-author: Tool's author
-    tool-version: Tool version
-    tool-repository: Tool's repository
-    tool-license: Tool's license
+  - tool-name: Tool Name
+    tool-authors:
+      - name: Tool Author
+        orcid: "https://orcid.org/0000-0001-1234-5678"
+    tool-version: Tool Version
+    tool-repository:
+      url: "https://github.com/organization/tool-repo"
+      doi: "https://doi.org/10.1234/tool.doi"
+    tool-license: Tool License
 
-# If your tool require some secrets token to be passed as ENV to the component
-# This won't be traced in MongoDB
+# Secrets (ENV variables)
 secrets:
-  - name: Key of the argument
-  - description: Description of the secret
+  - name: API_KEY
+    description: API key for authentication
+    type: str
 
-# If the tool requires some building arguments such as Matlab license
+# Build Arguments (if any)
 build-args:
-  - name: Key of the argument
-  - description: Descriptio of the building argument
-  - secret: Bool
+  - name: MATLAB_LICENSE
+    description: License key for Matlab
+    secret: true # Mark as secret if sensitive
 
-# If applicable, ports exposed by the component
-# Include Name, Description, and Port Value for each port
+# Exposed Ports
 ports:
-  - name: PORT A
-    description: Description of Port A
-    port-value: XXXX
-  - name: PORT B
-    description: Description of Port B
-    port-value: YYYY
+  - name: PORT_A
+    description: Main server port
+    port-value: 8080
+  - name: PORT_B
+    description: Auxiliary service port
+    port-value: 9090
 
-# If applicable, parameters exposed by the component
-# Datatype can be str, int, float, or bool.
+# Parameters for the Component
 parameters:
-  - name: PARAMETER A
-    default-value: DEFAULT_VALUE_A
-    datatype: DATATYPE_A
-    description: Description of Parameter A
-    parameter-bounds: # Boundaries for int and float datatype
-      - 0 # Lower bound
-      - inf # Upper bound
+  - name: PARAMETER_A
+    default-value: 10
+    datatype: int
+    description: Max retries allowed
+    parameter-bounds: 
+      - 0 # Minimum value
+      - 100 # Maximum value
     options: null
-    allow-custom-value: false # If true the user can add a custom value out of parameter-bounds, or options
-  - name: PARAMETER B
-    default-value: DEFAULT_VALUE_B
-    datatype: DATATYPE_B
-    description: Description of Parameter B
-    parameter-bounds: null
-    options: # If your string parameter is limited to a few option, please list them here. 
+    allow-custom-value: false
+
+  - name: PARAMETER_B
+    default-value: OptionA
+    datatype: str
+    description: Select a mode
+    options: 
       - OptionA
       - OptionB
-      - OptionC
-    allow-custom-value: false # If true the user can add a custom value out of parameter-bounds, or options
+      - OptionC # Limited choices for str type
+    allow-custom-value: false
 
-# If applicable, data-input list required by the component
+# Data Inputs
 data-inputs:
-  - name: INPUT A
-    type: TYPE_A # Folder or filetype
-    path: VALUE_A  
-    description: Description of Input A
-  - name: INPUT B
-    type: TYPE_B # Folder or filetype
-    path: VALUE_B  
-    description: Description of Input B
+  - name: INPUT_A
+    type: .txt
+    path: /path/to/input/SIMPLE_INPUT.txt
+    description: Single static input file
+    naming-convention: "SIMPLE_INPUT.txt"
 
-# If applicable, data-output list produced by the component
-data-output:
-  - name: OUTPUT A
-    type: TYPE_A # Folder or filetype
-    path: VALUE_A
-    description: Description of Output A
-  - name: OUTPUT B
-    type: TYPE_B # Folder or filetype
-    path: VALUE_B
-    description: Description of Output B
+  - name: INPUT_B
+    type: TYPE_B
+    path: /path/to/input/folder_A
+    description: Folder containing dynamically named input files
+    naming-convention: "data_{PARAMETER_A}_{PARAMETER_B}_v{number}.ext"
+    dynamic-naming-based-on:
+      - PARAMETER_A
+      - PARAMETER_B
+    sequence:
+      start: 1
+      increment: 1
 
-# If applicable, path to schemas to perform semantic validation.
-# Still under development. Ignore.
+  - name: INPUT_C
+    type: TYPE_C
+    path: /path/to/input/folder_B
+    description: Folder with structured input files
+    folder-structure:
+      required-files:
+        - file-pattern: "summary_{PARAMETER_C}_{date}.txt"
+        - file-pattern: "log_{PARAMETER_C}_{number}.json"
+      naming-convention: "parameter_and_numeric_based"
+      dynamic-naming-based-on:
+        - PARAMETER_C
+      date-format: "YYYYMMDD"
+      sequence:
+        start: 1
+        increment: 1
+
+# Data Outputs
+data-outputs:
+  - name: OUTPUT_A
+    type: .txt
+    path: /path/to/output/SIMPLE_OUTPUT.txt
+    description: Static output file
+    naming-convention: "SIMPLE_OUTPUT.txt"
+
+  - name: OUTPUT_B
+    type: TYPE_B
+    path: /path/to/output/folder_A
+    description: Folder for dynamic output files
+    naming-convention: "prefix_{PARAMETER_A}_{PARAMETER_B}_v{number}.ext"
+    dynamic-naming-based-on:
+      - PARAMETER_A
+      - PARAMETER_B
+    sequence:
+      start: 1
+      increment: 1
+
+  - name: OUTPUT_C
+    type: TYPE_C
+    path: /path/to/output/folder_B
+    description: Folder for structured output files
+    folder-structure:
+      required-files:
+        - file-pattern: "output_summary_{PARAMETER_C}_{date}.txt"
+        - file-pattern: "log_{PARAMETER_C}_{number}.json"
+      naming-convention: "parameter_and_numeric_based"
+      dynamic-naming-based-on:
+        - PARAMETER_C
+      date-format: "YYYYMMDD"
+      sequence:
+        start: 1
+        increment: 1
+
+# Validation Schemas (Future Development)
 schema-input: PATH_TO_INPUT_SCHEMA
 schema-output: PATH_TO_OUTPUT_SCHEMA
 
-# If applicable, define devices needed such as GPU.
+# Device Requirements
 devices:
-  gpu: Bool
+  - type: gpu
+    required: true
